--- a/product-api/package.json
+++ b/product-api/package.json
@@ -10,8 +10,11 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/pg": "^7.14.6",
     "aws-sdk": "^2.729.0",
     "babel-jest": "^26.6.1",
+    "dotenv": "^8.2.0",
+    "pg": "^8.4.2",
     "serverless-iam-roles-per-function": "^2.0.2",
     "source-map-support": "^0.5.10"
   },
