--- a/authorization-service/package.json
+++ b/authorization-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "import-service",
+  "name": "authorization-service",
   "version": "1.0.0",
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
@@ -7,17 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "csv-parser": "^2.3.3",
-    "pg": "^8.5.1",
     "serverless-dotenv-plugin": "^3.1.0",
-    "serverless-iam-roles-per-function": "^3.0.0-d84bffd",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
-    "aws-sdk": "^2.792.0",
+    "aws-sdk": "^2.799.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
